# resume_analyzer

./: .gitignore  README.md  pyproject.toml  resume_analyzer_build_prompt.md
data/: resume_analyzer.db
data/chroma_db/: chroma.sqlite3
data/sample_jds/: python_backend_engineer.txt
data/sample_resumes/: jane_doe_resume.txt
docs/: api_testing_guide.md  database_design.md  deliverables.md  scoring_methodology.md
src/: main.py  pipeline.py
src/api/: __init__.py  admin.py  jobs.py  matching.py  resumes.py
src/core/: config.py  exceptions.py  schemas.py
src/extraction/: base.py  llm_extractor.py  rule_base.py
src/ingestion/: parser_base.py  pdf_extractor.py
src/jobspec/: jd_analyzer.py
src/matching/: base.py  keyword_matcher.py  semantic_matcher.py
src/ranking/: scorer.py
src/storage/: db.py  vector_store.py
src/ui/: app.py
tests/: test_api_endpoints.py  test_api_more_endpoints.py
workers/: __init__.py  tasks.py
