[project]
name = "resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi[all]>=0.138.0",
    "groq>=0.33.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
